--- a/bock/ui/bower.json
+++ b/bock/ui/bower.json
@@ -27,7 +27,8 @@
     "moment": "^2.11.2",
     "diff2html": "^1.3.2",
     "angular-animate": "^1.5.0",
-    "angular-modal-service": "^0.9.10"
+    "angular-modal-service": "^0.9.10",
+    "angular-toastr": "^1.7.0"
   },
   "resolutions": {
     "angular": "^1.5.0"
