Prepare for bumpversion

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,14 @@
 [aliases]
-test=pytest
+test = pytest
 
 [pytest]
 flake8-max-line-length = 120
 norecursedirs = .eggs .cache .git node_modules bower_components
+
+[bumpversion]
+current_version = 1.0.21
+commit = True
+tag = True
+
+[bumpversion:file:bock/__init__.py]
+[bumpversion:file:bock/ui/package.json]
