Fix bumpversion config

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,4 +13,5 @@ norecursedirs = .eggs .cache .git node_modules bower_components
 [bumpversion:file:bock/__init__.py]
 
 [bumpversion:file:bock/ui/package.json]
-
+search = "version": "{current_version}"
+replace = "version": "{new_version}"
