Add bumpversion config for cached_dist

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,6 @@ norecursedirs = .eggs .cache .git node_modules bower_components
 search = "version": "{current_version}"
 replace = "version": "{new_version}"
 
+[bumpversion:file:bock/ui/cached_dist/index.html]
+search = @version {current_version}
+replace = @version {new_version}
