--- a/bock/ui/bower.json
+++ b/bock/ui/bower.json
@@ -20,7 +20,6 @@
     "angular": "angularjs#^1.5.0",
     "Ionicons": "ionicons#^2.0.1",
     "jquery": "^2.2.0",
-    "angular-ui-router": "^0.2.18",
     "flexboxgrid": "^6.3.0",
     "angular-loading-bar": "^0.8.0",
     "ng-page-title": "^1.1.1",
@@ -28,7 +27,8 @@
     "diff2html": "^1.3.2",
     "angular-animate": "^1.5.0",
     "angular-modal-service": "^0.9.10",
-    "angular-toastr": "^1.7.0"
+    "angular-toastr": "^1.7.0",
+    "angular-ui-router": "^0.3.1"
   },
   "resolutions": {
     "angular": "^1.5.0"
