--- a/bock/ui/bower.json
+++ b/bock/ui/bower.json
@@ -17,20 +17,18 @@
   ],
   "private": true,
   "dependencies": {
-    "angular": "angularjs#^1.5.0",
-    "Ionicons": "ionicons#^2.0.1",
-    "jquery": "^2.2.0",
-    "flexboxgrid": "^6.3.0",
-    "angular-loading-bar": "^0.8.0",
-    "ng-page-title": "^1.1.1",
-    "moment": "^2.11.2",
-    "diff2html": "^1.3.2",
-    "angular-animate": "^1.5.0",
+    "angular": "^1.6.0",
+    "angular-loading-bar": "^0.9.0",
+    "ng-page-title": "^1.3.1",
+    "moment": "^2.17.1",
+    "diff2html": "^2.0.11",
+    "angular-animate": "^1.6.0",
     "angular-modal-service": "^0.10.1",
-    "angular-toastr": "^1.7.0",
-    "angular-ui-router": "^0.3.1"
+    "angular-toastr": "^2.1.1",
+    "angular-ui-router": "^0.3.2"
   },
   "resolutions": {
-    "angular": "^1.5.0"
+    "angular": "1.6.0"
   }
 }
+
