--- a/bock/ui/bower.json
+++ b/bock/ui/bower.json
@@ -25,7 +25,9 @@
     "angular-animate": "^1.6.0",
     "angular-modal-service": "^0.10.1",
     "angular-toastr": "^2.1.1",
-    "angular-ui-router": "^0.3.2"
+    "angular-ui-router": "^0.3.2",
+    "angular-highlightjs": "^0.6.3",
+    "highlightjs": "^9.9.0"
   },
   "resolutions": {
     "angular": "1.6.0"
