--- a/bock/ui/bower.json
+++ b/bock/ui/bower.json
@@ -27,7 +27,9 @@
     "angular-toastr": "^2.1.1",
     "angular-ui-router": "^0.3.2",
     "angular-highlightjs": "^0.6.3",
-    "highlightjs": "^9.9.0"
+    "highlightjs": "^9.9.0",
+    "angulartics": "^1.3.0",
+    "angulartics-google-analytics": "^0.4.0"
   },
   "resolutions": {
     "angular": "1.6.0"
