--- a/bock/ui/package.json
+++ b/bock/ui/package.json
@@ -30,6 +30,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.2.0",
+    "gulp-template": "^4.0.0",
     "gulp-uglify": "^1.5.1",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
