--- a/bock/ui/package.json
+++ b/bock/ui/package.json
@@ -35,5 +35,8 @@
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
     "run-sequence": "^1.1.5"
+  },
+  "dependencies": {
+    "gulp-replace": "^0.5.4"
   }
 }
