Fix issue with versioning

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,5 @@ replace = "version": "{new_version}"
 [bumpversion:file:bock/ui/cached_dist/index.html]
 search = @version {current_version}
 replace = @version {new_version}
-
+search = v{current_version}&nbsp;
+replace = v{new_version}&nbsp;
