--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.7.4
+current_version = 1.7.1
 commit = True
 tag = True
 
@@ -19,5 +19,7 @@ replace = "version": "{new_version}"
 [bumpversion:file:bock/ui/cached_dist/index.html]
 search = @version {current_version}
 replace = @version {new_version}
+
+[bumpversion:file:./bock/ui/cached_dist/index.html]
 search = v{current_version}&nbsp;
 replace = v{new_version}&nbsp;
