--- a/bock/ui/package.json
+++ b/bock/ui/package.json
@@ -14,14 +14,41 @@
   },
   "homepage": "https://github.com/afreeorange/bock/blob/master/README.md",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config webpack.config.js",
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [
     "wiki",
+    "markdown",
     "mithril",
     "mithriljs"
   ],
   "devDependencies": {
-    "webpack": "^3.11.0"
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^8.0.0-beta.0",
+    "base64-font-loader": "0.0.4",
+    "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-minifier": "^3.5.9",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
+  },
+  "dependencies": {
+    "diff2html": "^2.3.3",
+    "highlight.js": "^9.12.0",
+    "mithril": "^1.1.6"
   }
 }
