--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.0.0
+current_version = 2.0.1
 commit = True
 tag = True
 
@@ -15,4 +15,8 @@ norecursedirs = .eggs .cache .git node_modules bower_components
 [bumpversion:file:bock/ui/package.json]
 search = "version": "{current_version}"
 replace = "version": "{new_version}"
+
+[bumpversion:file:bock/ui/src/Bock.js]
+search = const version = '{current_version}';
+replace = const version = '{new_version}';
 
