--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,18 @@
 root = true
 
 [*]
-indent_style = space
 charset = utf-8
-trim_trailing_whitespace = true
+indent_size = 4
+indent_style = space
 insert_final_newline = true
+tab_width = 4
+trim_trailing_whitespace = true
 
-[*.py, *.sass]
+[*.py]
 indent_size = 4
 
-[*.js]
+[*.{js,jsx,sass}]
 indent_size = 2
+
+[Makefile]
+indent_style = tab
