--- a/bock-ui/package.json
+++ b/bock-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiki.nikhil.io.ui",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "Web interface to my wiki",
   "main": "Bock.js",
   "repository": {
@@ -25,7 +25,7 @@
     "mithriljs"
   ],
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
+    "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.0.0-beta.40",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.0",
@@ -40,18 +40,18 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-minifier": "^3.5.9",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.13.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.0.0"
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "diff2html": "^2.3.3",
     "highlight.js": "^9.12.0",
-    "mithril": "^1.1.6",
+    "mithril": "^1.1.7",
     "universal-ga": "^1.2.0"
   }
 }
