--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ keywords = [
     "react"
 ]
 
+[tool.poetry.scripts]
+bock = "bock.cli:start"
+
 [tool.poetry.dependencies]
 python = "^3.7"
 flask = "^1.1"
@@ -29,9 +32,6 @@ gunicorn = "^20.0"
 click = "^7.0"
 pendulum = "^2.0"
 gitpython = "^3.0"
-
-[tool.poetry.dev-dependencies]
-bump2version = "^0.5.11"
 
 [build-system]
 requires = ["poetry>=0.12"]
