--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ keywords = [
     "flask",
     "react"
 ]
+include = [
+    "bock/ui/cached_dist/**/*"
+]
 
 [tool.poetry.scripts]
 bock = "bock.cli:start"
@@ -32,6 +35,12 @@ gunicorn = "^20.0"
 click = "^7.0"
 pendulum = "^2.0"
 gitpython = "^3.0"
+glob2 = "^0.7.0"
+watchdog = "^0.9.0"
+tornado = "^6.0"
+markdown = "^3.1"
+whoosh = "^2.7"
+pymdown-extensions = "^6.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
