Start CI/CD tooling

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 3.3.3
-commit = True
-tag = True
+current_version = 3.4.0
+commit = False
+tag = False
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
