--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build-ui:
     docker:
-      - image: cimg/node
+      - image: cimg/node:16.3.0
     steps:
       - checkout
       - run:
