--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,31 @@ jobs:
       - image: cimg/node:16.3.0
     steps:
       - checkout
+
+      - restore_cache:
+          name: 🗃 Restoring package cache
+          keys:
+            - yarn-packages-{{ .Branch }}-{{ checksum "yarn.lock" }}
+
+      # This command is for yarn v1 only! See this:
+      # https://circleci.com/docs/2.0/yarn/
       - run:
-          command: .scripts/build-ui
+          name: Install Dependencies
+          command: yarn install --frozen-lockfile --cache-folder ~/.cache/yarn
+
+      - save_cache:
+          name: 💾 Saving package cache
+          key: yarn-packages-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.cache/yarn
+      - run:
+          command: |
+            yarn
+            yarn build
 
   build-api:
     docker:
-      - image: cimg/python
+      - image: cimg/python:3.9.5
     steps:
       - checkout
       - run:
