--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,13 +29,13 @@ jobs:
             yarn
             yarn build
 
-  # build-api:
-  #   docker:
-  #     - image: cimg/python:3.9.5
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         command: .scripts/build-api
+  build-api:
+    docker:
+      - image: cimg/python:3.9.5
+    steps:
+      - checkout
+      - run:
+          command: .scripts/build-api
 
 workflows:
   version: 2
