--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - restore_cache:
           name: 🗃 Restoring package cache
           keys:
-            - yarn-packages-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - yarn-packages-{{ .Branch }}-{{ checksum "bock/ui/yarn.lock" }}
 
       # This command is for yarn v1 only! See this:
       # https://circleci.com/docs/2.0/yarn/
@@ -20,7 +20,7 @@ jobs:
 
       - save_cache:
           name: 💾 Saving package cache
-          key: yarn-packages-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          key: yarn-packages-{{ .Branch }}-{{ checksum "bock/ui/yarn.lock" }}
           paths:
             - ~/project/bock/ui/node_modules
 
