--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
             - ~/project/bock/ui/node_modules
 
       - run:
+          name: Build UI
           command: |
             cd bock/ui
             yarn build
@@ -36,21 +37,31 @@ jobs:
           paths:
             - .
 
-  # build-api:
-  #   docker:
-  #     - image: cimg/python:3.9.5
-  #   steps:
-  #     - attach_workspace:
-  #         at: .
-  #     - run:
-  #         command: |
-  #           ls -lA bock/ui/
+  build-api:
+    docker:
+      - image: cimg/python:3.9.5
+    steps:
+      - attach_workspace:
+          at: .
+      - restore_cache:
+          keys: 
+            - deps-{{ checksum "poetry.lock" }}
+      - run:
+          name: Install Dependencies
+          command: |
+            poetry install
+      - save_cache:
+          key: deps-{{ checksum "poetry.lock" }}
+          paths: 
+            - /home/circleci/.cache/pypoetry/virtualenvs
+      - run:
+          command: .scripts/bock-api
 
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build-ui
-      # - build-api:
-      #     requires:
-      #       - build-ui
+      - build-api:
+          requires:
+            - build-ui
