--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,9 @@
 version: 2.1
 
+orbs:
+  gh: circleci/github-cli@1.0
+  node: circleci/node@4.3
+
 jobs:
   build-ui:
     docker:
@@ -58,6 +62,31 @@ jobs:
           command: |
             .scripts/build-api
             ls -lA dist/
+
+  publish-github-release:
+    docker:
+      - image: cibuilds/github:0.10
+    steps:
+      - attach_workspace:
+          at: ./artifacts
+      - run:
+          name: "Publish Release on GitHub"
+          command: |
+            VERSION=$(my-binary --version)
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/
+
+  gh/release:
+    context:
+      - GITHUB_CREDS
+    filters:
+      branches:
+        only:
+          - main
+    notes-file: CHANGELOG.md
+    requires:
+      - node/test
+    tag: 1.0.0
+    title: Test Release
 
 workflows:
   version: 2
