--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 3.4.0
-commit = False
-tag = False
+current_version = 3.4.2
+commit = True
+tag = True
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
