--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
   build-ui:
     docker:
       - image: cimg/node:16.3.0
+    environment:
+      CI: true
     steps:
       - checkout
       - restore_cache:
