--- a/bock/ui/cached_dist/manifest.json
+++ b/bock/ui/cached_dist/manifest.json
@@ -1,9 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Bock",
+  "version": "3.4.6",
+  "name": "A Quick Personal Wiki",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
@@ -20,6 +21,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ffbe0d",
   "background_color": "#ffffff"
 }
