--- a/bock/ui/cached_dist/manifest.json
+++ b/bock/ui/cached_dist/manifest.json
@@ -1,10 +1,9 @@
 {
-  "short_name": "Bock",
-  "version": "3.4.6",
-  "name": "A Quick Personal Wiki",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
@@ -21,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffbe0d",
+  "theme_color": "#000000",
   "background_color": "#ffffff"
 }
