--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+# Build and deploy the Linux version of this to my public bucket.
+
 version: 2.1
 
 orbs:
@@ -31,6 +33,9 @@ jobs:
             - "/go/pkg/mod"
 
 workflows:
-  build-and-deploy:
+  build-and-publish:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              only: master
